# zjstatus

./: .gitignore  .zellij.kdl  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile.test  LICENSE  Makefile  README.md  flake.nix  justfile  mise.toml  plugin-dev-workspace.kdl  rust-toolchain.toml  shell.nix
.cargo/: config.toml
.claude/: pr-review-loop-report.local.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  other-issues.md
.github/workflows/: lint.yml  release.yml
benches/: benches.rs  widgets.rs
docs/: PRD-tab-status.md
docs/plans/: 2026-02-27-tab-status-design.md  2026-02-27-tab-status-impl.md  2026-03-01-docker-integration-tests.md
examples/: compact.kdl  conky.conf  conky.kdl  simple.kdl  slanted.kdl  swap-layouts.kdl  tmux.kdl
scripts/: zellij-tab-status
src/: border.rs  config.rs  frames.rs  lib.rs  main.rs  pipe.rs  render.rs
src/widgets/: clock.rs  command.rs  datetime.rs  mod.rs  mode.rs  notification.rs  pipe.rs  session.rs  swap_layout.rs  tabs.rs  widget.rs
tests/integration/: docker-test-runner.sh  helpers.sh  test-layout.kdl  test-race-runner.sh  test_01_basic.sh  test_02_edge_cases.sh  test_99_regression_template.sh.example
tests/zjframes/: config.kdl
tests/zjstatus/: config.kdl  layout.kdl
