[package]
name = "zjstatus"
version = "0.20.2"
authors = ["Daniel Jankowski"]
edition = "2018"

[[bin]]
name = "zjstatus"
bench = false

[[bin]]
name = "zjframes"
bench = false

[lib]
bench = false

[features]
bench = []
tracing = []

[dependencies]
zellij-tile = "0.42.1"
chrono = { version = "0.4.40", default-features = false }
regex = "1.11.1"
chrono-tz = "0.10.3"
anyhow = "1.0.97"
anstyle = "1.0.10"
uuid = { version = "1.16.0", features = ["v4"] }
lazy_static = "1.5.0"
cached = { version = "0.55.1", features = ["wasm"] }
console = "0.15.11"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
kdl = { version = "6.3.4", features = ["v1", "v1-fallback"] }
rstest = "0.25.0"
itertools = "0.14.0"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = [
    "html_reports",
] }

[[bench]]
name = "benches"
harness = false

[[bench]]
name = "widgets"
harness = false
