[package]
name = "zjstatus"
version = "0.21.1"
authors = ["Daniel Jankowski"]
edition = "2024"

[[bin]]
name = "zjstatus"
bench = false

[[bin]]
name = "zjframes"
bench = false

[lib]
bench = false

[features]
bench = []
tracing = []

[dependencies]
zellij-tile = "0.43.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
regex = "1.12.2"
chrono-tz = "0.10.4"
anyhow = "1.0.100"
anstyle = "1.0.13"
uuid = { version = "1.18.1", features = ["v4"] }
lazy_static = "1.5.0"
cached = { version = "0.56.0", features = ["wasm"] }
console = "0.16.1"
tracing-subscriber = "0.3.22"
tracing = "0.1.41"
kdl = { version = "6.5.0", features = ["v1", "v1-fallback"] }
rstest = "0.26.1"
itertools = "0.14.0"

[dev-dependencies]
# criterion = { version = "0.8.0", default-features = false, features = [
#     "html_reports",
# ] }

[[bench]]
name = "benches"
harness = false

[[bench]]
name = "widgets"
harness = false
